Crash when bmesh operation called from within a Panel draw() #35150

Closed
opened 2013-04-29 18:28:05 +02:00 by Gaia Clary · 3 comments
Member

%%%--- Operating System, Graphics card ---

Windows 7
nvidia Titan

- Blender version with error, and version that worked ---

2.66.5 revision 56275

- Short description of error ---

Blender crashes when i create a panel with following function call in its draw() function:

      bm = bmesh.from_edit_mesh(context.edit_object.data)
- Steps for others to reproduce the error (preferably based on attached .blend file) ---

The problem occurs only when i create a new object. when i store the blend file
and later reload it in blender then the error does not occur. Therefor i could not prepare
a blend file that immediately shows the error.

However i have attached a blend file wich prepares as much as possible and a detailed
instruction how the problem can be reproduced (on windows at least)

Here are the steps for reproduction (also included in the blend file)

1.) Run the script in the attached blend file to add the new Panel "BMesh Test"
2.) Create a cube
3.) Add a subdivision modifier (4 subdivisions)
4.) Add the standard Seams for a Cube
5.) Apply the modifier
6.) "u" -> unwrap (defautl unwrap)
7.) in UV editor "g" and move the mesh

And here is a screencast to demonstrate what happens:

http://www.youtube.com/watch?v=DLjpFVXl--s&feature=youtu.be%%%

%%%--- Operating System, Graphics card --- Windows 7 nvidia Titan - Blender version with error, and version that worked --- 2.66.5 revision 56275 - Short description of error --- Blender crashes when i create a panel with following function call in its draw() function: ``` bm = bmesh.from_edit_mesh(context.edit_object.data) ``` - Steps for others to reproduce the error (preferably based on attached .blend file) --- The problem occurs only when i create a new object. when i store the blend file and later reload it in blender then the error does not occur. Therefor i could not prepare a blend file that immediately shows the error. However i have attached a blend file wich prepares as much as possible and a detailed instruction how the problem can be reproduced (on windows at least) Here are the steps for reproduction (also included in the blend file) 1.) Run the script in the attached blend file to add the new Panel "BMesh Test" 2.) Create a cube 3.) Add a subdivision modifier (4 subdivisions) 4.) Add the standard Seams for a Cube 5.) Apply the modifier 6.) "u" -> unwrap (defautl unwrap) 7.) in UV editor "g" and move the mesh And here is a screencast to demonstrate what happens: http://www.youtube.com/watch?v=DLjpFVXl--s&feature=youtu.be%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed 56396.%%%

%%%fixed 56396.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#35150
No description provided.