fix [#35150] Crash when bmesh operation called from within a Panel draw()

accessing a bmesh from python would reallocate all customdata layers.

add an assert to BM_data_layer_free(), when its called unnecessarily since its reallocating all layers.